developed a dynamic table + edit/delete buttons, also the table gets the most recent sighting

--- a/index.html
+++ b/index.html
@@ -92,9 +92,29 @@
         </div>
     </div>
 </form>
-
-
 <!-------------------------------------------------------------- Search Ends  ----------------------------------------------------------------->
+
+
+<!-------------------------------------------------------------- Table Starts ------------------------------------------------------------------>
+<div class = "table-container">
+    <table class="table" id = "sqlTable">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Person</th>
+            <th scope="col">Location</th>
+            <th scope="col">Sighted</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+        </tr>
+        </thead>
+        <tbody id = "myTable">
+
+        </tbody>
+    </table>
+</div>
+<!---------------------------------------------------------------- Table Ends -------------------------------------------------------------------->
+
 <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -102,6 +122,7 @@
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script></body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/1.3.0/json2html.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.json2html/1.2.0/jquery.json2html.min.js"></script>
 </body>
 </html>
